# bibliometric

./: .gitignore  CITATION.cff  Containerfile  GEMINI.md  README.md  TODO.md  ecosystem.config.js  pyproject.toml  run_local.py  t  test_references.csv  test_references_rich.csv
.antigravitycli/: ce665d13-bfbe-48f7-9b6b-7c5687f716a1.json
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/app/: NetworkVisualizer.tsx  fonts.ts  layout.tsx  page.tsx
notebooks/: Authors.ipynb  Citations.ipynb  Count Growth.ipynb  Institutions.ipynb  Keyword.ipynb
scripts/: country_classifier.py
src/: pipeline.py
src/api/: main.py
src/core/: citations.py  collection.py  countries.py  ingestion.py  network.py  nlp.py  viz.py
src/core/collectors/: crossref.py  elsevier.py  openalex.py  pubmed.py  semantic_scholar.py  wos.py
src/ui/: app.py
tests/: test_citations_countries.py  test_collection.py  verify_pipeline.py
